--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,33 @@
 
 /* Your CSS Code here. */
+*{
+	margin:0px;
+	padding:0px;
+}
+.holder{
+	display:flex;
+	justify-content:center;
+	align-items:center;
+	flex-wrap:wrap;
+}
+.div1{
+	width:80px;
+	height:80px;
+	font-size:50px;
+	font-weight:500;
+	background-color:red;
+}
+.div2{
+	width:80px;
+	height:80px;
+	font-size:50px;
+	font-weight:500;
+	background-color:blue;
+}
+.div3{
+	width:80px;
+	height:80px;
+	font-size:50px;
+	font-weight:500;
+	background-color:green;
+}
